--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="color/default.css" rel="stylesheet" />
   </head>
 
-  <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+  <body id="page-top" data-spy="scroll" oncontextmenu="return false" data-target=".navbar-custom">
     <!-- Preloader -->
     <div id="preloader">
       <div id="load"></div>
