--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="color/default.css" rel="stylesheet" />
   </head>
-
-  <body id="page-top" data-spy="scroll" oncontextmenu="return false" data-target=".navbar-custom">
+<!--   oncontextmenu="return false" -->
+  <body id="page-top" data-spy="scroll"  data-target=".navbar-custom">
     <!-- Preloader -->
     <div id="preloader">
       <div id="load"></div>
