--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="team boxed-grey">
                 <div class="inner">
                   <h5>Okhotin Vladimir </h5>
-                  <p class="subtitle">Assistant Pastor and President of Russian Evangelical Ministry (REM)</p>
+                  <p class="subtitle">Assistant Pastor and President of Russian Evangelical Ministry</p>
                   <div class="avatar">
                     <img
                       src="img/team/.jpg"
