--- a/rus.html
+++ b/rus.html
@@ -426,7 +426,7 @@
         </div>
       </div>
     </footer>
-    <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "7Grurca7WJ");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
+   <!--  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "7Grurca7WJ");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript> -->
     <script>
       document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
