--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Independent Russian Baptist Church Of San Diego</title>
-    <meta name="description" content="Independent Russian Baptist Church Of San Diego"/>
-    <meta property="og:title" content="Independent Russian Baptist Church Of San Diego"/>
+    <title>Independent Slavic Baptist Church Of San Diego</title>
+    <meta name="description" content="Independent Slavic Baptist Church Of San Diego"/>
+    <meta property="og:title" content="Independent Slavic Baptist Church Of San Diego"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:url" content="">
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Independent Russian Baptist Church Of San Diego"/>
+    <meta property="og:description" content="Independent Slavic Baptist Church Of San Diego"/>
     <meta property="og:image" content="./img/icons/cross.png"/>
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/ico" href="./img/icons/cross.png">
@@ -19,8 +19,8 @@
     <link rel="apple-touch-icon" href="img/icons/cross.png" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Independent Russian Baptist Church Of San Diego">
-    <meta name="twitter:description" content="Independent Russian Baptist Church Of San Diego">
+    <meta name="twitter:title" content="Independent Slavic Baptist Church Of San Diego">
+    <meta name="twitter:description" content="Independent Slavic Baptist Church Of San Diego">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -61,7 +61,7 @@
               <img src="./img/icons/eng.png" alt="english">
              </a>
              <a href="rus.html">
-              <img src="./img/icons/rus.png" alt="russian">
+              <img src="./img/icons/rus.png" alt="Slavic">
              </a>
            </div>
           </div>
@@ -84,7 +84,7 @@
     <section id="intro" class="intro">
       <div class="slogan">
         <h2>WELCOME TO <span class="text_color"></span></h2>
-        <h4>Independent Russian Baptist Church Of San Diego</h4>
+        <h4>Independent Slavic Baptist Church Of San Diego</h4>
         <h3>
           "...Seek first the kingdom of God and His righteousness..." <span class="quotation">Matthew 6:33</span>
         </h3>
@@ -183,7 +183,7 @@
               <div class="team boxed-grey">
                 <div class="inner">
                   <h5>Church Information</h5>
-                  <p class="description">We are a baptist church. Our church services are in Russian. However, English translation is available. We belong to the International Union of Churches of the Evangelical Christian Baptists (IUC-ECB) movement that started in the former Soviet Union in the year of 1961. </p>
+                  <p class="description">We are a baptist church. Our church services are in Slavic. However, English translation is available. We belong to the International Union of Churches of the Evangelical Christian Baptists (IUC-ECB) movement that started in the former Soviet Union in the year of 1961. </p>
                 </div>
               </div>
             </div>
@@ -349,7 +349,7 @@
                    marker = new google.maps.Marker({
                     position: myLatLng,
                     map: map,
-                    title: "Independent Russian Baptist Church Of San Diego",
+                    title: "Independent Slavic Baptist Church Of San Diego",
                   });    
                 };
         
@@ -369,7 +369,7 @@
               <h5>Address</h5>
 
               <address>
-                <strong>Independent Russian Baptist Church Of San Diego</strong><br />
+                <strong>Independent Slavic Baptist Church Of San Diego</strong><br />
                 6365 El Apajo (glass room)<br />
                 Rancho Santa Fe, CA 92067<br />
                 <abbr title="Phone">Phone:</abbr> <a href="tel:(858) 345-7332">(858) 345-7332</a>
@@ -424,7 +424,7 @@
                 </a>
               </div>
             </div>
-            <p>&copy;<span id='year'> </span> Independent Russian Baptist Church of San Diego</p>
+            <p>&copy;<span id='year'> </span> Independent Slavic Baptist Church of San Diego</p>
           </div>
         </div>
       </div>
