Fixed maps for tablet

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       </div>
       <div class="container">
         <iv class="row">
-          <div class="col-lg-8 col-sm-4">
+          <div class="col-lg-8">
            
 			  <div id="map"></div>
 
