--- a/rus.html
+++ b/rus.html
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+   <!--  <div class="container">
       <div class="row">
         <div class="col-lg-12 col-lg">
           <hr class="marginbot-50" />
@@ -154,7 +154,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- second row -->
     <div class="container">
       <div class="marginbot-50">
