--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
               </address>
               <address>
                 <strong>Email</strong><br />
-                <a href="davidokhotinmd@gmail.com">davidokhotinmd@gmail.com</a>
+                <a href="mailto:mail@slavicbaptistsandiego.org">mail@slavicbaptistsandiego.org</a>
                 <strong></strong><br />
-                <a href="yuriycsus@sbcglobal.net">yuriycsus@sbcglobal.net</a>
+                <a href="mailto:bible@slavicbaptistsandiego.org">bible@slavicbaptistsandiego.org</a>
               </address>
 
              <!--  <address>
