--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
                 <div class="service-desc">
                   <h5>Ministry</h5>
                   <p>
-                    Street and Personal Evangelism
+                    Sunday School
+                    Friday - 7:00pm
                   </p>
                 </div>
               </div>
