--- a/index.html
+++ b/index.html
@@ -280,9 +280,8 @@
                   <img src="img/icons/service-icon-4.png" alt="" />
                 </div>
                 <div class="service-desc">
-                  <h5>Ministry</h5>
+                  <h5>Sunday School</h5>
                   <p>
-                    Sunday School
                     Friday - 7:00pm
                   </p>
                 </div>
