--- a/rus.html
+++ b/rus.html
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-   <!--  <div class="container">
+    <!--  <div class="container">
       <div class="row">
         <div class="col-lg-12 col-lg">
           <hr class="marginbot-50" />
@@ -165,6 +165,7 @@
         <div class="wow bounceInUp" data-wow-delay="0.2s">
           <div class="team boxed-grey">
             <div class="inner">
+              <img loading="lazy" src="./img/church.png" alt="Church building" />
               <h5>Информация О Церкви</h5>
               <p class="description">Мы по вероисповеданию баптисты. Наши церковные собрания проходят на русском языке.
                 Однако возможен английский перевод. Мы принадлежим к движению Международного Совета Церквей Евангельских
@@ -178,6 +179,7 @@
         <div class="wow bounceInUp" data-wow-delay="0.2s">
           <div class="team boxed-grey">
             <div class="inner">
+              <img loading="lazy" src="./img/bible.png" alt="Church building" />
               <h5>Во что мы верим</h5>
               <p class="description">&bull; Мы верим в Троицу, в Бога Отца, Сына и Святого Духа.<br /> <br />
                 &bull; Мы верим в что Библия является словом Божиим и что оно непогрешимо (Библия включает в себя все 66
