Added new images + lazy loading

--- a/rus.html
+++ b/rus.html
@@ -49,10 +49,10 @@
         <div class="language">
           <div>
             <a href="/">
-              <img src="./img/icons/eng.png" alt="english">
+              <img loading="lazy" src="./img/icons/eng.png" alt="english">
             </a>
             <a href="rus.html">
-              <img src="./img/icons/rus.png" alt="Slavic">
+              <img loading="lazy" src="./img/icons/rus.png" alt="Slavic">
             </a>
           </div>
         </div>
@@ -119,7 +119,7 @@
                 <h5>Охотин Давид Владимирович </h5>
                 <p class="subtitle">Пастор</p>
                 <div class="avatar">
-                  <img src="./img/icons/churchBuilding.png" alt="pastor" />
+                  <img loading="lazy" src="./img/icons/churchBuilding.png" alt="pastor" />
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
                 <h5>Охотин Владимир Андреевич</h5>
                 <p class="subtitle">Пастор</p>
                 <div class="avatar">
-                  <img src="./img/icons/pastor.png" alt="assistant" />
+                  <img loading="lazy" src="./img/icons/pastor.png" alt="assistant" />
                 </div>
               </div>
             </div>
@@ -147,7 +147,7 @@
                 <p class="subtitle">Молодежный Отдел</p>
                 <p class="subtitle">Евангелизация</p>
                 <div class="avatar">
-                  <img src="./img/icons/violin.png" alt="music" />
+                  <img loading="lazy" src="./img/icons/violin.png" alt="music" />
                 </div>
               </div>
             </div>
@@ -249,7 +249,7 @@
           <div class="wow fadeInLeft" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-1.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-1.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Богослужения</h5>
@@ -264,7 +264,7 @@
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-2.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-2.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Молитвенное Служение</h5>
@@ -279,7 +279,7 @@
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-3.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-3.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Дополнительные Служения</h5>
@@ -294,7 +294,7 @@
           <div class="wow fadeInRight" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-4.png" alt="" />
+                <img loading="lazy" src="img/icons/sunday-school.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Изучение Слова Божьего</h5>
