--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div class="language">
           <div>
             <a href="/">
-              <img src="./img/icons/eng.png" alt="english">
+              <img loading="lazy" src="./img/icons/eng.png" alt="english">
             </a>
             <a href="rus.html">
-              <img src="./img/icons/rus.png" alt="Slavic">
+              <img loading="lazy" src="./img/icons/rus.png" alt="Slavic">
             </a>
           </div>
         </div>
@@ -120,7 +120,7 @@
                   <h5>David A. Okhotin</h5>
                   <p class="subtitle">Senior Pastor</p>
                   <div class="avatar">
-                    <img
+                    <img loading="lazy"
                       src="./img/icons/churchBuilding.png"
                       alt="pastor"
                     />
@@ -136,7 +136,7 @@
                   <h5>Vladimir A. Okhotin</h5>
                   <p class="subtitle">Associate Pastor</p>
                   <div class="avatar">
-                    <img
+                    <img loading="lazy"
                       src="./img/icons/pastor.png"
                       alt="assistant"
                     />
@@ -154,7 +154,7 @@
                   <p class="subtitle">Youth Group Leader</p>
                   <p class="subtitle">Evangelical Outreach and Ministry Leader</p>
                   <div class="avatar">
-                    <img
+                    <img loading="lazy"
                       src="./img/icons/violin.png"
                       alt="music"
                     />
@@ -257,7 +257,7 @@
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-2.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-2.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Worship</h5>
@@ -272,7 +272,7 @@
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-3.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-3.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Praying</h5>
@@ -287,7 +287,7 @@
           <div class="wow fadeInRight" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-4.png" alt="" />
+                <img loading="lazy" src="img/icons/sunday-school.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Sunday School</h5>
@@ -302,7 +302,7 @@
           <div class="wow fadeInLeft" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
-                <img src="img/icons/service-icon-1.png" alt="" />
+                <img loading="lazy" src="img/icons/service-icon-1.png" alt="" />
               </div>
               <div class="service-desc">
                 <h5>Bible Study</h5>
