Minor editing on the russian page

--- a/rus.html
+++ b/rus.html
@@ -282,9 +282,9 @@
                 <img loading="lazy" src="img/icons/service-icon-3.png" alt="" />
               </div>
               <div class="service-desc">
-                <h5>Дополнительные Служения</h5>
+                <h5>Воскресная школа</h5>
                 <p>
-                  Уличное и Личное Благовестие
+                  Пятница - 19:00
                 </p>
               </div>
             </div>
